1 August 2005 Sylvain Pion
- Cartesian_converter : specialize when same_type<K1, K2>.

1 August 2005 Sylvain Pion
- Remove K::make_FT and K::FT_{numerator|denominator}
  (replaced by Rational_traits).

30 July 2005 Sylvain Pion
- Fix Cartesian_converter for Circle_2::orientation().

30 July 2005 Sylvain Pion
- Add some explicit casts to allow Uncertain<>.

29 July 2005 Andreas Fabri
- Added conversion of a vector of Objects in Cartesian_converter.h

26 July 2005 Andreas Fabri
- Removed debug printout in Cartesian_converter.h
- Replaced int with unsigned int in a for loop in Cartesian_converter.h

26 July 2005 Sylvain Pion
- Fix Qualified_result_of<CartesianKernelFunctors::Compute_squared_radius_2<K>,
  typename K::Circle_2 >

26 July 2005 Andreas Fabri
- Added conversion in Cartesian_converter for CGAL::Object with a kernel object inside 

25 July 2005 Andreas Fabri
- Added Qualified_result_of<CartesianKernelFunctors::Compute_squared_radius_2<K>, typename K::Circle_2, int >
- Moved equality test from Vector_2, Point_2 to global_functions

20 July 2005 Andreas Fabri
- Moved Compute_y_2 from Kernel_23 to Cartesian_kernel
- Added qualified_result_type to some functors

24 June 2005 Andreas Fabri
- Removed  #ifndef CGAL_NO_DEPRECATED_CODE for Construct_vector_2 and Construct_direction_2

18 June 2005 Andreas Fabri
- Moved code from Kernel_class_2 to the functors

19 May 2005 Sylvain Pion
- Add centroid(Triangle_[23]) and centroid(Tetrahedron_3).

11 May 2005 Sylvain Pion
- New predicates : orientation(3 Vector_3) and orientation(2 Vector_2).

============================= CGAL 3.1 ==========================

17 September 2004 Sylvain Pion
- Cartesian_converter.h : add #include <CGAL/Origin.h>.

14 September 2004 Sylvain Pion
- Cartesian_converter : add converions for Origin and Null_vector.
- More global functions call the functors.

4 September 2004 Menelaos Karavelas
- re-wrote author names in copyright notices using 7-bit characters

22 June 2004 Sylvain Pion