@@ -1,3 +1,9 @@
+6 August 2005 Sylvain Pion
+- Remove <FT> qualification for functions part of the NT interface
+  (sign, compare...), for efficiency.
+- Add <FT> qualification for functions which are not part of the
+  NT interface (det3x3_by_formula...) to support GMP++ like types.
+
 1 August 2005 Sylvain Pion
 - Cartesian_converter : specialize when same_type<K1, K2>.
 
